Details    : Some RPCs that should not be resent are being resent.  This
	     can cause inconsistencies in the RPC state machine.  Do not
	     resend such requests.

Severity   : normal
Frequency  : rare, only with NFS export
Bugzilla   : 11669
Description: Crash on NFS re-export node
Details    : under very unusual load conditions an assertion is hit in
	     ll_intent_file_open()

Severity   : major	     
Frequency  : only if OST filesystem is corrupted
Bugzilla   : 9829
Description: client incorrectly hits assertion in ptlrpc_replay_req()
Details    : for a short time RPCs with bulk IO are in the replay list,
	     but replay of bulk IOs is unimplemented.  If the OST filesystem
	     is corrupted due to disk cache incoherency and then replay is
	     started it is possible to trip an assertion.  Avoid putting
	     committed RPCs into the replay list at all to avoid this issue.

Severity   : normal
Frequency  : always
Bugzilla   : 10901
Description: large O_DIRECT requests fail under memory pressure/fragmentation
Details    : Large single O_DIRECT read and write calls can fail to allocate
	     a sufficiently large buffer to process the request.  In case of
	     allocation failure the allocation is retried with a smaller
	     buffer and broken into smaller requests.

------------------------------------------------------------------------------

2006-02-09  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.9
       * Support for kernels:
        2.6.16.21-0.8 (SLES10)
        2.6.9-42.0.3EL (RHEL 4)
        2.6.5-7.276 (SLES 9)
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.12.6 vanilla (kernel.org)
       * bug fixes

       * The backwards-compatible /proc/sys/portals symlink has been removed
	 in this release.  Before upgrading, please ensure that you change
	 any configuration scripts or /etc/sysctl.conf files that access
	 /proc/sys/portals/* or sysctl portals.* to use the corresponding